after reviewer comments

--- a/investigate-a-dataset-template.ipynb
+++ b/investigate-a-dataset-template.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project: Investigate a Dataset (Replace this with something more specific!)\n",
+    "# Project: Investigation of the profitability of films from TMDB dataset\n",
+    "\n",
+    "Christian J Sutton\n",
+    "\n",
+    "<a href='https://github.com/cjsutton77/UdacityCourse'>github repository</a>\n",
     "\n",
     "## Table of Contents\n",
     "<ul>\n",
@@ -3210,7 +3214,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f969e045430>]"
+       "[<matplotlib.lines.Line2D at 0x7f8e98eb4100>]"
       ]
      },
      "execution_count": 36,
@@ -3241,6 +3245,34 @@
   {
    "cell_type": "code",
    "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    3.832000e+03\n",
+       "mean     1.117921e+01\n",
+       "std      2.635343e+02\n",
+       "min      2.329427e-07\n",
+       "25%      8.746045e-01\n",
+       "50%      2.118164e+00\n",
+       "75%      4.205187e+00\n",
+       "max      1.289041e+04\n",
+       "Name: rev_over_bud, dtype: float64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies_clean.rev_over_bud.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -3361,7 +3393,7 @@
        "[2 rows x 29 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3372,7 +3404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -3497,7 +3529,7 @@
        "[2 rows x 29 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3515,16 +3547,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f969c98a2b0>]"
+       "[<matplotlib.lines.Line2D at 0x7f8e97980940>]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3558,7 +3590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -3575,7 +3607,7 @@
        "Name: runtime, dtype: float64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3586,7 +3618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3603,7 +3635,7 @@
        "Name: runtime, dtype: float64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3621,16 +3653,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f969dfeeb80>]"
+       "[<matplotlib.lines.Line2D at 0x7f8e98e702b0>]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3659,12 +3691,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So spending a lot of money on a film doesn't ensure profitability.  Although it would seem that "
+    "So spending a lot of money on a film doesn't ensure profitability.  We see the majority of high budget films swarmed around break-even profitability.  However, there is a group of high budget films, in the upper left corner of the plot failing to recover cost."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {
     "scrolled": true
    },
@@ -3695,7 +3727,7 @@
        "Name: rev_over_bud, dtype: float64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3707,7 +3739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -3716,7 +3748,7 @@
        "Text(0.5, 1.0, 'Average profitability by genre')"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3756,7 +3788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -3765,7 +3797,7 @@
        "Text(0.5, 1.0, 'Average profitability by year')"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3799,7 +3831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -4528,7 +4560,7 @@
        "[22 rows x 29 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4546,7 +4578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -4555,7 +4587,7 @@
        "Text(0.5, 1.0, 'Average profitability by release month')"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4573,8 +4605,8 @@
     }
    ],
    "source": [
-    "year_budget = movies_clean.groupby(['month']).rev_over_bud.mean()\n",
-    "year_budget.plot(kind='bar')\n",
+    "month_budget = movies_clean.groupby(['month']).rev_over_bud.mean()\n",
+    "month_budget.plot(kind='bar')\n",
     "plt.xlabel('Release month')\n",
     "plt.ylabel('Ratio of revenue to budget')\n",
     "plt.title('Average profitability by release month')"
@@ -4599,10 +4631,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What we have learned is that profitability is not ensured by long run times or popularity of the film.  Horror films have a high average profitability.  Summer movies releases also have had a high average profitability.  \n",
+    "The dataset used for this analysis was the TMDB database, <b>comprised of 10866 samples</b>, with 20 attributes, releated to cast, production firm, budget and revenue, release datss, as well as public reaction measures like average vote, popularity.  \n",
     "\n",
-    "Summer released horror movies have had good past performance based on profitability, but this does not ensure a profitabile film."
+    "We eliminated irrelevant fields, such as database id values, website, and taglines.  We reformatted fields into more readable formats (integers, dates).  Columns with multivalued fields, such as production company, genre, and cast were split into seperate columns.  Next duplicated values and unrealistic budget values were eliminated.  In particular, we eliminated films with zero budget or zero revenue.    From budget and revenue we calculated a ratio of revenue to budget (<b>rev_to_bud</b>) that was used to investigate profitability.   For this ratio a value of <b>less than 1</b> indicated a film failing to recover cost of production.  A value <b>greater than 1</b> indicates profitability.  A highly successful film like <b>Star Wars</b> recovered ~70 times its cost of production adjusted to 2010 USD.\n",
+    "\n",
+    "This revenue over budget was used to analyze profitability against other paramters, such as primary genre, year of release, month of release, runtime, and film popularity.  However, there were some anomalously high profitability films; these were eliminated from the study, as they fell well outside the distribution revenue over budget ratio.  Whether these films had errors in budget, revenue, or had very low budgets was not the intent of the study.  <b>After elimination of anomalies, duplicates, and erroneous values we were left with a cohort of 3832 films</b>.  While this was near a third of the original dataset sample size, this is still a sufficently large dataset to collect aggregate statistics for.\n",
+    "\n",
+    "Due to the value range of revenue over budget, many plots had to use a logarthmic scale.   We observed, on average, summer releases had the highest profitability, and horror films also had a high average profitability.  The most popular films tended to at least break even or earn up to ten times their budget.  The average film earned ~11x its budget, with 50% earning at least 2x.  Low profitability films were, unsurprisingly, skewed towards low popularity.\n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
